--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,64 @@
-altair==5.5.0
-appdirs==1.4.4
-attrs==25.3.0
-blinker==1.9.0
-branca==0.8.1
-cachetools==6.1.0
-cattrs==25.1.1
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-contourpy==1.3.2
-cycler==0.12.1
-et_xmlfile==2.0.0
-folium==0.20.0
-fonttools==4.58.5
-geojson-rewind==1.1.0
-geomet==1.1.0
-geopandas==1.1.1
-gitdb==4.0.12
-GitPython==3.1.44
-idna==3.10
-Jinja2==3.1.6
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-narwhals==1.47.0
-numpy==2.3.1
-openpyxl==3.1.5
-packaging==25.0
-pandas==2.3.1
-pillow==11.3.0
-platformdirs==4.3.8
-protobuf==6.31.1
-pyarrow==20.0.0
-pydeck==0.9.1
-pygbif==0.6.5
-pyogrio==0.11.0
-pyparsing==3.2.3
-pyproj==3.7.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-referencing==0.36.2
-requests==2.32.4
-requests-cache==1.2.1
-rpds-py==0.26.0
-shapely==2.1.1
-six==1.17.0
-smmap==5.0.2
-streamlit==1.46.1
-streamlit_folium==0.25.0
-tenacity==9.1.2
-toml==0.10.2
-tornado==6.5.1
-typing_extensions==4.14.1
-tzdata==2025.2
-url-normalize==2.2.1
-urllib3==2.5.0
-watchdog==6.0.0
-xyzservices==2025.4.0
+attrs==23.2.0
+Automat==22.10.0
+Babel==2.10.3
+bcrypt==3.2.2
+blinker==1.7.0
+certifi==2023.11.17
+chardet==5.2.0
+click==8.1.6
+cloud-init==24.4
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+constantly==23.10.4
+cryptography==41.0.7
+dbus-python==1.3.2
+distro==1.9.0
+distro-info==1.7+build1
+GDAL==3.8.4
+httplib2==0.20.4
+hyperlink==21.0.0
+idna==3.6
+incremental==22.10.0
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.10.3
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+netifaces==0.11.0
+numpy==1.26.4
+oauthlib==3.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycurl==7.45.3
+Pygments==2.17.2
+PyGObject==3.48.2
+PyHamcrest==2.1.0
+PyJWT==2.7.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
+pyserial==3.5
+python-apt==2.7.7+ubuntu3
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+service-identity==24.1.0
+setuptools==68.1.2
+six==1.16.0
+systemd-python==235
+Twisted==24.3.0
+typing_extensions==4.10.0
+ubuntu-pro-client==8001
+unattended-upgrades==0.1
+urllib3==2.0.7
+wadllib==1.3.6
+wheel==0.42.0
+zope.interface==6.1
+plotly==6.2.0
