--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,8 @@ plotly==6.2.0
 attrs==25.3.0
 geopandas==1.1.1
 pygbif==0.6.5
+folium==0.20.0
+streamlit==1.47.0
+pandas==2.3.1
+shapely==2.1.1
+geopy==2.4.1
