--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ geopandas==1.1.1
 pygbif==0.6.5
 folium==0.20.0
 streamlit==1.47.0
+streamlit-folium==0.25.0
 pandas==2.3.1
 shapely==2.1.1
 geopy==2.4.1
